[package]
name = "node_crunch"
version = "0.1.0"
authors = ["Willi Kappler <grandor@gmx.de"]
description = "A crate for distributed computing"
keywords = ["distribute", "numeric", "computing", "cluster", "hpc"]
categories = ["Network programming", "Science"]
edition = "2018"
license = "MIT"
repository = "https://github.com/willi-kappler/node_crunch/"
documentation = "https://docs.rs/node_crunch"
exclude = ["examples/*", "diagrams/*"]

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
bincode = "1"
rand = "0.7"
thiserror = "1.0"
threadpool = "1.0"


[profile.release]
lto = true
