[package]
authors = ["Willi Kappler <grandor@gmx.de"]
categories = ["network-programming", "science"]
description = "A crate for distributed computing"
documentation = "https://docs.rs/node_crunch"
edition = "2018"
exclude = ["examples/*", "diagrams/*"]
keywords = ["distribute", "numeric", "computing", "cluster", "hpc"]
license = "MIT"
name = "node_crunch"
repository = "https://github.com/willi-kappler/node_crunch/"
version = "0.1.0"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
bincode = "1"
rand = "0.7"
thiserror = "1.0"
threadpool = "1.0"


[profile.release]
lto = true
