[package]
authors = ["Willi Kappler <grandor@gmx.de"]
categories = ["network-programming", "science"]
description = "A crate for distributed computing"
documentation = "https://docs.rs/node_crunch"
edition = "2018"
exclude = ["examples", "diagrams"]
keywords = ["distribute", "numeric", "computing", "cluster", "hpc"]
license = "MIT"
name = "node_crunch"
repository = "https://github.com/willi-kappler/node_crunch/"
version = "0.2.0"

[dependencies]
log = "0.4"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
async-std = "1.12"
rmp-serde = "1.1"
zenoh = "0.7.0-rc"

#bincode = "1"
#rand = "0.7"
#threadpool = "1.0"
#lz4_flex = "0.8.2"
#chacha20poly1305 = "0.9.0"

[profile.release]
lto = true
