[package]
name = "ray_tracer1"
version = "0.2.0"
authors = ["Willi Kappler <grandor@gmx.de"]
description = "A crate for distributed computing"
keywords = ["distribute", "network", "numeric", "computing", "cluster", "hpc"]
categories = ["Network programming", "Science"]
edition = "2018"

[dependencies]
log = "0.4"
log4rs = "1.0"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
num = "0.2"
image = "0.23"

node_crunch = { path = "../../../node_crunch" }
ray-tracer = { git = "https://github.com/willi-kappler/ray-tracer" }

[profile.release]
lto = true
